Refine homepage aesthetics, layout consistency, and navigation fixes

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "Home": "Home",
     "About": "About",
-    "Suites": "Suites",
+    "Rooms": "Rooms",
     "Events": "Events",
     "Experiences": "Experiences",
     "Gallery": "Gallery",
@@ -19,7 +19,7 @@
     "Lush Gardens": "Lush Gardens",
     "Curated Tours": "Curated Tours",
     "Sanctuary": "Sanctuary",
-    "Our Suites": "Our Suites",
+    "Our Rooms": "Our Rooms",
     "Experience comfort in our historically preserved chambers, where every detail tells a story of the past.": "Experience comfort in our historically preserved chambers, where every detail tells a story of the past.",
     "Sleeps": "Sleeps",
     "Starting from": "Starting from",
@@ -35,9 +35,10 @@
     "Phone Number": "Phone Number",
     "Check-in Date": "Check-in Date",
     "Check-out Date": "Check-out Date",
-    "Preferred Suite": "Preferred Suite",
+    "Room Type": "Room Type",
     "Special Requests": "Special Requests",
     "Request Reservation": "Request Reservation",
+    "Reserve Room": "Reserve Room",
     "Our Concierge will contact you to confirm": "Our Concierge will contact you to confirm",
     "Nearest Places": "Nearest Places",
     "Discover the rich heritage and vibrant culture of Jaffna, just moments from our doorstep.": "Discover the rich heritage and vibrant culture of Jaffna, just moments from our doorstep.",
