--- a/lang/si.json
+++ b/lang/si.json
@@ -1,7 +1,7 @@
 {
     "Home": "මුල් පිටුව",
     "About": "අප ගැන",
-    "Suites": "කාමර",
+    "Rooms": "කාමර",
     "Events": "උත්සව",
     "Experiences": "අත්දැකීම්",
     "Gallery": "ඡායාරූප",
@@ -19,7 +19,7 @@
     "Lush Gardens": "සශ්‍රීක උද්‍යාන",
     "Curated Tours": "විශේෂ චාරිකා",
     "Sanctuary": "සැඟවුණු නවාතැන",
-    "Our Suites": "අපගේ කාමර",
+    "Our Rooms": "අපගේ කාමර",
     "Experience comfort in our historically preserved chambers, where every detail tells a story of the past.": "සෑම විස්තරයක්ම අතීතයේ කතාවක් පවසන අපගේ ඓතිහාසිකව සංරක්ෂණය කරන ලද කුටිවල සුවපහසුව අත්විඳින්න.",
     "Sleeps": "සඳහා නවාතැන්",
     "Starting from": "සිට ආරම්භ වේ",
@@ -35,9 +35,10 @@
     "Phone Number": "දුරකථන අංකය",
     "Check-in Date": "පැමිණීමේ දිනය",
     "Check-out Date": "පිටත්වීමේ දිනය",
-    "Preferred Suite": "ප්‍රියතම කාමරය",
+    "Room Type": "කාමර වර්ගය",
     "Special Requests": "විශේෂ ඉල්ලීම්",
     "Request Reservation": "වෙන්කිරීමක් ඉල්ලන්න",
+    "Reserve Room": "කාමරය වෙන්කරවා ගන්න",
     "Our Concierge will contact you to confirm": "අපගේ සහායකයා තහවුරු කිරීමට ඔබව සම්බන්ධ කර ගනු ඇත",
     "Nearest Places": "ළඟම ඇති ස්ථාන",
     "Discover the rich heritage and vibrant culture of Jaffna, just moments from our doorstep.": "යාපනයේ පොහොසත් උරුමය සහ විචිත්‍රවත් සංස්කෘතිය අපගේ නවාතැනේ සිට සුළු මොහොතකින් සොයා ගන්න.",
