--- a/lang/ta.json
+++ b/lang/ta.json
@@ -1,7 +1,7 @@
 {
     "Home": "முகப்பு",
     "About": "பற்றி",
-    "Suites": "அறைகள்",
+    "Rooms": "அறைகள்",
     "Events": "நிகழ்வுகள்",
     "Experiences": "அனுபவங்கள்",
     "Gallery": "புகைப்படங்கள்",
@@ -19,7 +19,7 @@
     "Lush Gardens": "செழிப்பான தோட்டங்கள்",
     "Curated Tours": "தொகுக்கப்பட்ட சுற்றுப்பயணங்கள்",
     "Sanctuary": "சரணாலயம்",
-    "Our Suites": "எங்கள் அறைகள்",
+    "Our Rooms": "எங்கள் அறைகள்",
     "Experience comfort in our historically preserved chambers, where every detail tells a story of the past.": "ஒவ்வொரு விவரமும் கடந்த காலத்தின் கதையைச் சொல்லும் எமது வரலாற்று ரீதியாகப் பாதுகாக்கப்பட்ட அறைகளில் வசதியை அனுபவியுங்கள்.",
     "Sleeps": "தங்கும் நபர்கள்",
     "Starting from": "தொடங்கும் விலை",
@@ -35,9 +35,10 @@
     "Phone Number": "தொலைபேசி எண்",
     "Check-in Date": "வருகை திகதி",
     "Check-out Date": "வெளியேறும் திகதி",
-    "Preferred Suite": "விருப்பமான அறை",
+    "Room Type": "அறை வகை",
     "Special Requests": "சிறப்பு கோரிக்கைகள்",
     "Request Reservation": "முன்பதிவு கோரிக்கை",
+    "Reserve Room": "அறையை முன்பதிவு செய்யுங்கள்",
     "Our Concierge will contact you to confirm": "எங்கள் வரவேற்பாளர் உங்களைத் தொடர்பு கொண்டு உறுதிப்படுத்துவார்",
     "Nearest Places": "அருகிலுள்ள இடங்கள்",
     "Discover the rich heritage and vibrant culture of Jaffna, just moments from our doorstep.": "யாழ்ப்பாணத்தின் செழுமையான பாரம்பரியம் மற்றும் துடிப்பான கலாச்சாரத்தை எமது வீட்டு வாசலில் இருந்து சில நிமிடங்களில் கண்டறியுங்கள்.",
